--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,8 @@
 
 
     //Obetener los datos (backend) > renderizar en la tabl|a
-    async function obetenerProductos(){
+    async function obtenerProductos(){
+
      const response = await fetch(API_URL, { method: 'get' })  
      const productos = await response.json()
      //console.log(productos)
@@ -141,7 +142,7 @@
       deleteButton.classList.add('btn')
       deleteButton.classList.add('btn-danger')
       deleteButton.classList.add('btn-sm')
-      deleteButton.onclick = () => eliminarEdicion(producto.id, producto.descripcion)
+      deleteButton.onclick = () => eliminarProducto(producto.id, producto.descripcion)
 
 
       //Agregando ambos botones a la ultima celda
@@ -150,6 +151,27 @@
 
      });
 
+    }
+
+    async function eliminarProducto(id, descripcion){
+      if(confirm(`¿Esta seguro de eliminar el producto: ${descripcion}?`)){
+        try{
+          const response = await fetch(API_URL + `/${id}`, { method: 'delete' })
+          
+
+          if(!response.ok){
+            throw new Error(`Error al eliminar: ${descripcion}`)
+          }
+
+          //Eliminado correctamente...
+          const result = await response.json()
+          console.log(result)
+          obtenerProductos()
+
+        }catch(e){
+          console.error(e)
+        }
+      }
     }
 
     formulario.addEventListener("submit", async (event) => {
@@ -177,7 +199,9 @@
       }
     })
     //Cuando la pagina este lista, se ejecutará obtenerProductos
-    document.addEventListener('DOMContentLoaded', obetenerProductos)
+    document.addEventListener('DOMContentLoaded', obtenerProductos)
+
+
 
 
   </script>
