Creamos clientes controller, index y añadimos la ruta tiendas

--- a/public/index_clientes.html
+++ b/public/index_clientes.html
@@ -57,7 +57,7 @@
               </div>
             </div>
           </div>
-
+          
           <div class="row mb-2">
             <div class="col-md-6">
               <div class="form-floating">
@@ -98,7 +98,7 @@
 
   <script>
     const API_URL = 'http://localhost:3000/api/clientes';
-    const API_TIENDAS = 'http://localhost:3000/api/tiendas'; // si luego haces CRUD de tiendas
+    const API_TIENDAS = 'http://localhost:3000/api/tiendas';
 
     const form = document.getElementById('form-cliente');
     const tabla = document.querySelector('#tabla-clientes tbody');
